--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,20 +1,19 @@
 [project]
-name = "template-de-projeto"
+name = "cifra-marketplace"
 version = "0.0.1"
 dependencies = [
     "Django==5.1",
     "django-cors-headers==4.2.0",
     "django-environ==0.10.0",
+    "django-image-uploader-widget==1.0.0",
     "djangorestframework==3.14.0",
     "djangorestframework-simplejwt==5.2.2",
     "drf-nested-routers==0.93.4",
     "drf-spectacular==0.26.3",
     "drf-spectacular-sidecar==2023.7.1",
-    "drf-rw-serializers==1.4.0",
     "Faker==19.2.0",
     "Pillow==10.0.0",
     "psycopg2-binary==2.9.6",
-    "redis==5.0.0",
 ]
 
 [tool.setuptools]
