feat: creating a action to show only promotions
fix: exclude atribute in pre commit file

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -39,6 +39,6 @@ repos:
 exclude: |
   (?x)^(
       features/.*/migrations/.*$|
+      features/.*/fixtures/.*$|
       ^.*/templates/.*$|
-      ^.*/fixtures/.*$|
-  )
+  )$
