--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,7 @@ version = "0.0.1"
 dependencies = [
     "Django==5.1",
     "django-cors-headers==4.2.0",
+    "django-daisy==1.0.22",
     "django-environ==0.10.0",
     "django-image-uploader-widget==1.0.0",
     "djangorestframework==3.14.0",
