--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,9 +27,9 @@ dev = [
 ]
 
 [tool.poe.tasks]
-migrate = "docker-compose exec api python manage.py migrate"
-makemigrations = "docker-compose exec api python manage.py makemigrations"
-shell = "docker-compose exec api python manage.py shell"
+migrate = "docker compose exec api python manage.py migrate"
+makemigrations = "docker compose exec api python manage.py makemigrations"
+shell = "docker compose exec api python manage.py shell"
 
 
 [tool.pylint.MESSAGE_CONTROL]
