trying to fix admin delay in server when saving inline

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,6 +29,7 @@ services:
       - ./features:/app/features
       - ./media:/app/media
       - ./templates:/app/templates
+      - ./static:/app/static
     env_file:
       .env
 
